swagger documentation + fixed some problems